# poly-dyn

./: README.md  poly-dyn.cabal
examples/: First.hs
src/Data/Dynamic/: Poly.hs
